--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,8 @@
 
 [[plugins]]
     package = "netlify-plugin-cache-nextjs"
+
+[[redirects]]
+    from = "/*"
+    to = "/index.html"
+    status = 200
