--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,6 @@
 [build]
-    base = "/"
-    command = "npm run build"
-
-[[plugins]]
-    package = "netlify-plugin-cache-nextjs"
+	command = "npm run build"
+	publish = "build"
 
 [[redirects]]
     from = "/*"
