--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,9 @@
 [build]
 	command = "npm run build"
 	publish = "build"
+    
+[[plugins]]
+    package = "netlify-plugin-cache-nextjs"
 
 [[redirects]]
     from = "/*"
